# vibe-coding-community

./: .env.example  .gitignore  clean_users.py  main.py  pyproject.toml  supabase_schema.sql
src/: config.py  main.py
src/auth/: alipay_router.py  alipay_verify.py  dependencies.py  router.py  schemas.py  service.py  wechat_oauth.py  wechat_router.py
src/categories/: router.py  service.py
src/core/: mock_data.py  supabase.py
src/messages/: router.py  service.py
src/posts/: router.py  schemas.py  service.py
src/responses/: router.py  service.py
src/users/: router.py
static/css/: styles.css
static/js/: htmx-preload.js
templates/: base.html  home.html
templates/auth/: login.html  register.html  user_agreement.html  verify_failed.html  verify_identity.html  verify_success.html  wechat_error.html  wechat_role_select.html
templates/auth/partials/: login_form.html  register_form.html
templates/categories/: list.html  posts.html
templates/components/: alert.html  footer.html  navbar.html
templates/errors/: 404.html
templates/messages/: list.html
templates/messages/partials/: message_dropdown.html
templates/posts/: create.html  detail.html  list.html
templates/posts/partials/: post_card.html  post_list.html  response_list.html
templates/users/: my_orders.html  my_posts.html  profile.html  solver_profile.html
templates/users/partials/: profile_form.html
